2010-10-23  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/menus.jl: fixed poweroff issue

	* sawfish.pc.in: make sure pager builds correctly

	* configure.in: bump version to 1.7.0.1

	* man/news.texi: updated

2010-09-25  Teika kazura <teika@lavabit.com>
	* lisp/sawfish/wm/ext/old-window-menu.jl: Resurrected. It was
	removed in commit cf79775e.

	* lisp/sawfish/gtk/widgets/scheme-boolean.jl: Reverted the last
	commit b961a052fced. (Retaining bugfix.)

 	* lisp/sawfish/gtk/widgets/simple-dialog.jl
	* man/news.texi
	* man/sawfish-config.1: News & doc. See git commit 5fafc9680e log
	for the details.

2010-09-23  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/commands/viewport-extras.jl: export `move-viewport-next'
	and `move-viewport-previous' (both required for pager 0.7.5)

2010-09-21  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/gtk/widgets/scheme-boolean.jl: fixed loading widget-dialog,
	it's now in simple-dialog. Also change the behaviour a bit: Previously the
	buttons label changed from "Yes" to "No" depending on state, now it's only
	"Enable", this to improve window-matcher appearance (scheme-boolean is only
	used in window-matcher and an revised version (with real fix) will come with
	Sawfish 3.0.0).

	* debian/sawfish-data.install.in: remove monitor.png from here, too.

	* lisp/sawfish/wm/ext/edge-flip.jl: some comments on upcoming changes
	in 2.90.0 cycle

	* lisp/sawfish/wm/ext/infinite-desktop.jl: improved name of the functions.
	some comments on upcoming changes in 2.90.0 cycle. export
	`infinite-desktop-enable' (so that it can be enabled via sawfishrc, too)

2010-09-21  Teika kazura <teika@lavabit.com>
	* lisp/sawfish/wm/keymaps.jl
	* lisp/sawfish/wm/windows.jl: window-property 'never-delete'
	spec change.
	It was only used in delete-window-safely. But now, this property
	is valid for some others too, but only when they are called
	interactively. This allows user to choose the mouse binding of
	"close-button".