@@ -1,3 +1,10 @@
+2010-12-09  Christopher Bratusek <zanghar@freenet.de>
+	* configure.in
+	* lisp/sawfish/cfg/Makefile.in: fix installation for non-root-users by
+	not hardcoding /usr for icons and kde4-prefix [Stefano Sabatini]
+
+	* configure.in: bump version to 1.7.1 (Chewing Drum)
+
 2010-10-23  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/menus.jl: fixed poweroff issue
 
